--- a/Prover.Instruments.Data/packages.config
+++ b/Prover.Instruments.Data/packages.config
@@ -4,6 +4,9 @@
   <package id="MvvmLight" version="4.1.27.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.1.27.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.5" targetFramework="net45" />
+  <package id="NLog" version="2.0.1.2" targetFramework="net45" />
+  <package id="PostSharp" version="2.1.7.30" targetFramework="net45" />
+  <package id="PostSharp.NotifyPropertyChanged" version="0.4.1.0" targetFramework="net45" />
   <package id="Prism" version="4.1.0.0" targetFramework="net45" />
   <package id="RavenDB.Client" version="2.0.2360" targetFramework="net45" />
   <package id="RavenDB.Database" version="2.0.2360" targetFramework="net45" />
