--- a/Prover.Instruments.Search/packages.config
+++ b/Prover.Instruments.Search/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
+  <package id="NLog" version="2.0.1.2" targetFramework="net45" />
+  <package id="PostSharp" version="2.1.7.30" targetFramework="net45" />
+  <package id="PostSharp.NotifyPropertyChanged" version="0.4.1.0" targetFramework="net45" />
   <package id="Prism" version="4.1.0.0" targetFramework="net45" />
   <package id="Prism.UnityExtensions" version="4.1.0.0" targetFramework="net45" />
   <package id="Unity" version="3.0.1304.0" targetFramework="net45" />
