--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\..\Prover.Client.ModernUI\packages.config" />
   <repository path="..\..\Prover.Client\packages.config" />
   <repository path="..\..\Prover.Console\packages.config" />
+  <repository path="..\..\Prover.Dashboard\packages.config" />
   <repository path="..\..\Prover.Instruments.Data\packages.config" />
   <repository path="..\..\Prover.Instruments.Search\packages.config" />
   <repository path="..\..\Prover.Instruments\packages.config" />
