--- a/Prover.Instruments.Search/Prover.Instruments.View.vbproj
+++ b/Prover.Instruments.Search/Prover.Instruments.View.vbproj
@@ -11,6 +11,7 @@
     <AssemblyName>Prover.Instruments.View</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MyType>Custom</MyType>
+    <ExpressionBlendVersion>5.0.40218.0</ExpressionBlendVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
