--- a/serialprotocol/miSerialProtocol/NLog.config
+++ b/serialprotocol/miSerialProtocol/NLog.config
@@ -6,22 +6,27 @@
   See http://nlog-project.org/wiki/Configuration_file 
   for information on customizing logging rules and outputs.
    -->
-  <targets>
-    <!-- add your targets here -->
-	<target name="logfile" xsi:type="File" fileName="prover_log.txt"/>
-	<target name="console" xsi:type="Console" />
-    <!--
-    <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-            layout="${longdate} ${uppercase:${level}} ${message}" />
-    -->
-  </targets>
+	-->
+	<variable name="logFilePath" value="${basedir}/logs/${shortdate}.log" />
+	<targets>
+		<!-- add your targets here -->
+		<target name="logfile" xsi:type="File" fileName="logFilePath"/>
+		<target name="console" xsi:type="Console" />
+		<!--
+		<target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
+				layout="${longdate} ${uppercase:${level}} ${message}" />
+		-->
+	</targets>
+	<targets>
+		<target xsi:type="MessageBox" name="mbox" caption="Error" layout="An error has occurred. Please see the log file (${logFilePath}) for more details."/>
+	</targets>
 
-  <rules>
-    <!-- add your logging rules here -->
-	<logger name="*" minlevel="Info" writeTo="logfile" />
-	<logger name="*" minlevel="Trace" writeTo="console" />
-    <!--
-    <logger name="*" minlevel="Trace" writeTo="f" />
-    -->
-  </rules>
+	<rules>
+		<!-- add your logging rules here -->
+		<logger name="*" minlevel="Info" writeTo="logfile" />
+		<logger name="*" minlevel="Trace" writeTo="console" />
+		<!--
+		<logger name="*" minlevel="Trace" writeTo="f" />
+		-->
+	</rules>
 </nlog>
