--- a/serialprotocol/miSerialProtocol/Prover.SerialProtocol.vbproj
+++ b/serialprotocol/miSerialProtocol/Prover.SerialProtocol.vbproj
@@ -102,6 +102,8 @@
   <ItemGroup>
     <Compile Include="EC300Class.vb" />
     <Compile Include="ECATClass.vb" />
+    <Compile Include="ICommPort.vb" />
+    <Compile Include="IrDAPort.vb" />
     <Compile Include="MiniMax\MiniMaxClass.vb" />
     <Compile Include="miSerialProtocolClass.vb" />
     <Compile Include="MiniATClass.vb" />
@@ -120,6 +122,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="SerialPort.vb" />
     <Compile Include="TCIClass.vb" />
   </ItemGroup>
   <ItemGroup>
