--- a/Prover.Client/App.config
+++ b/Prover.Client/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Prover.Client.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
@@ -15,4 +20,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <Prover.Client.MySettings>
+      <setting name="DatabaseURL" serializeAs="String">
+        <value>http://localhost:8080</value>
+      </setting>
+    </Prover.Client.MySettings>
+  </applicationSettings>
+	<connectionStrings>
+		<add name="DBServer" connectionString="Url = http://localhost:8080;Database=prover"/>
+	</connectionStrings>
 </configuration>
