--- a/Prover/App.config
+++ b/Prover/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
 	<connectionStrings>
-		<add name="DAMProverEntities" connectionString="metadata=res://*/ProverModel.csdl|res://*/ProverModel.ssdl|res://*/ProverModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\DAMProver.sdf&quot;" providerName="System.Data.EntityClient"/>
+		<add name="DBServer" connectionString="Url = http://localhost:8080;Database=prover"/>
 	</connectionStrings>
 </configuration>
