--- a/Prover.Client/Prover.Client.vbproj
+++ b/Prover.Client/Prover.Client.vbproj
@@ -195,7 +195,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\MiniMax_Rotary_Thumb1_NEW_Lg.jpg" />
