--- a/Prover.Instruments.Search/Prover.Instruments.View.vbproj
+++ b/Prover.Instruments.Search/Prover.Instruments.View.vbproj
@@ -221,5 +221,8 @@
   <ItemGroup>
     <Resource Include="Themes\Icons\search.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DesignData\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
