--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\..\Prover.Certificates.Data\packages.config" />
+  <repository path="..\..\Prover.Certificates.View\packages.config" />
   <repository path="..\..\Prover.Client.ModernUI\packages.config" />
   <repository path="..\..\Prover.Client\packages.config" />
   <repository path="..\..\Prover.Console\packages.config" />
