--- a/Prover.Client/Prover.Client.vbproj
+++ b/Prover.Client/Prover.Client.vbproj
@@ -88,8 +88,8 @@
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\src\packages\MvvmLightLibs.4.1.27.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
+    <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\src\packages\Prism.4.1.0.0\lib\NET40\System.Windows.Interactivity.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -253,10 +253,6 @@
     <ProjectReference Include="..\Prover.Instruments.Search\Prover.Instruments.View.vbproj">
       <Project>{7de480a7-2e26-4bdf-9788-18b9ad791760}</Project>
       <Name>Prover.Instruments.View</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Prover.Instruments\Prover.Instruments.Tester.vbproj">
-      <Project>{6290e240-4ef2-44db-bcf7-2d58fdb99cca}</Project>
-      <Name>Prover.Instruments.Tester</Name>
     </ProjectReference>
     <ProjectReference Include="..\Prover\Prover.vbproj">
       <Project>{f397ca27-ec97-4b98-b8cf-e60eb1f399b9}</Project>
