--- a/Prover.Instruments.Data.Tests/Prover.Instruments.Data.Tests.vbproj
+++ b/Prover.Instruments.Data.Tests/Prover.Instruments.Data.Tests.vbproj
@@ -81,6 +81,7 @@
     <Import Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataProvider.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
