--- a/Prover.Instruments.Data/Prover.Instruments.Data.vbproj
+++ b/Prover.Instruments.Data/Prover.Instruments.Data.vbproj
@@ -191,6 +191,7 @@
     </Content>
     <Content Include="MiniMaxItems.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
